# ws-agentic-ai-smart-agents

./: .gitignore  README.md  readme.md
src/langflow/: gip-multi-agent-router-jacques-chef.json
src/mod-2-rag/langflow-pipelines/: gip-phase-1-rag-multi-modal-files-chroma-db.json  gip-phase-1-rag-pdf-docling.json  gip-phase-1-rag-pdf-split-text.json  gip-phase-2-online-query.json
src/mod-2-rag/rag-llama-index/: chunking.py  ingestion.py  requirements.txt
src/mod-4-multi-agents/crew-ai-agents/: .env.example  .gitignore  crew.py  main.py  pyproject.toml  readme.md  report.md  requirements.txt  step-by-step.md  use-case.md
src/mod-4-multi-agents/crew-ai-agents/agents/: __init__.py  base_agent.py  dietary_specialist.py  promotions_manager.py  readme.md  restaurant_concierge.py
src/mod-4-multi-agents/crew-ai-agents/config/: __init__.py  agents.yaml  readme.md  settings.py  tasks.yaml
src/mod-4-multi-agents/crew-ai-agents/crews/: README.md  __init__.py  crew_factory.py  restaurant_crew.py
src/mod-4-multi-agents/crew-ai-agents/database/: __init__.py  models.py
src/mod-4-multi-agents/crew-ai-agents/examples/: quick_demo.py
src/mod-4-multi-agents/crew-ai-agents/ingestion/: __init__.py  docling_processor.py  embeddings.py  pipeline.py  readme.md  supabase_client.py  test_ingestion.py
src/mod-4-multi-agents/crew-ai-agents/observability/: __init__.py  langfuse_config.py  metrics.py  readme.md  tracing.py
src/mod-4-multi-agents/crew-ai-agents/scripts/: ingest_data.py  readme.md  setup_database.py  validate_environment.py
src/mod-4-multi-agents/crew-ai-agents/storage/json/: restaurants.json
src/mod-4-multi-agents/crew-ai-agents/tests/: __init__.py  test_agents.py  test_config.py  test_crews.py  test_ingestion.py  test_models.py  test_observability.py  test_tools.py
src/mod-4-multi-agents/crew-ai-agents/tools/: __init__.py  allergen_checker.py  base_tool.py  coupon_finder.py  readme.md  restaurant_search.py  supabase_retriever.py
src/rag-llama-index/: .env.example  chunking.py  config.py  flow.md  indexer.py  preprocessor.py  quality.py  readme.md  requirements.txt  transformer.py
storage/csv/: coupons_2025-07-31.csv
storage/doc/: allergy.docx
storage/json/: restaurants.json
(+4 files in other folders)
